fixed some spacing so the game page is centered on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,19 @@
   }
 }
 
+html, body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+#__next {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
